--- a/photo-album/package.json
+++ b/photo-album/package.json
@@ -12,7 +12,8 @@
     "react-photo-album": "^2.0.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
