--- a/photo-album/package.json
+++ b/photo-album/package.json
@@ -6,13 +6,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "8.5",
+    "firebase": "^9.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-photo-album": "^2.0.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^3.5.2"
   },
