--- a/photo-album/package.json
+++ b/photo-album/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "firebase deploy",
+    "deploy": "npm run build && firebase deploy",
     "rules-firebase": "firebase deploy --only firebase",
     "update-node": "nvm use 16.17.0"
   },
